# studies.rabbitmq

./: README.md
python/: docker-compose.yml
python/hello_world/: pyproject.toml  receive.py  send.py
