[tool.poetry]
name = "rabbitmq-tutorials"
version = "0.1.0"
description = "RabbitMQ Tutorials in Python"
authors = ["KingofTime <antonio_neto77@hotmail.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pika = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
